feat: implement parallel Fan-Out orchestration to concurrently execute and reconcile independent worker decisions.